feat: Phase 5 성능 최적화 및 기능 추가
기능 추가:
- 면접 기록 검색 (GET /interviews/search)
- 면접 일시정지/재개 (PATCH pause/resume)
- 면접 타이머 (3분/5분 카운트다운)
- 모범 답안 토글 표시

성능 최적화:
- N+1 쿼리 → Fetch Join (11 SQL → 1)
- 7개 복합/GIN 인덱스 추가
- 비관적 락으로 Race Condition 해결
- Redis 캐싱 (@Cacheable JD 목록/상세)
- SSE 전용 스레드 풀 (core:50, max:100)
- SseEmitter TTL 정리 + max 5,000 제한
- ZGC + 서비스별 힙 사이징
- HikariCP 서비스별 풀 차등 할당
- React Query 대시보드 캐싱
- 임베딩 배치 처리 (embedAll)

인프라:
- Prometheus 메트릭 (JVM, Hibernate, HikariCP)
- k6 시나리오 3종 (검색 부하, 동시성, Soak Test)
- 성능 튜닝 문서 재작성

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>